remove payment method page

--- a/views/login/userPledges.ejs
+++ b/views/login/userPledges.ejs
@@ -29,14 +29,12 @@
                     <li  >
                         <a href="/users/settings" style="color: #000000;">Settings</a>
                     </li>
+
                     <li>
-                        <a href="/users/paymentMethod" style="color: #000000;">Payment Method</a>
+                        <a href="/users/contribution" style="color: #000000;">My Contributions</a>
                     </li>
                     <li>
-                        <a href="/users/contribution" style="color: #000000;"><strong>My Contributions</strong></a>
-                    </li>
-                    <li>
-                        <a href="/users/pledge" style="color: #000000;">My Pledges</a>
+                        <a href="/users/pledge" style="color: #000000;"><strong>My Pledges</strong></a>
                     </li>
                     <li>
                         <a href="/users/collections" style="color: #000000;">My Favorites</a>
