--- a/views/login/userProfile.ejs
+++ b/views/login/userProfile.ejs
@@ -89,7 +89,7 @@
             <div class="row">
                 <h3 class="col-xs-3 col-xs-height col-top" style="margin-top: 0px; padding-bottom: 3%;"  id="profileBasicInfo">Basic Info</h3>
                 <div class="col-xs-9 col-xs-height col-top" style="padding-bottom: 1%">
-                    <div id="updateBasicInfoFailMessage" class="form-group" style="padding-bottom: 1%; display : none"">
+                    <div id="updateBasicInfoFailMessage" class="form-group" style="padding-bottom: 1%; display : none">
                         <p style="margin-top: 0px; float: left;color: red; font-style:italic">Update basic info failed. Please try it again.</p><br>
                     </div>
                     <form id="userUpdateBasicInfoForm" class="form-signin" method="post" style="padding-top: 2%">
@@ -131,54 +131,98 @@
             </div>
             <hr/>
             <div class="row">
-                <h3 class="col-xs-3 col-xs-height col-top" style="margin-top: 0px;padding-bottom: 3%;"  id="profilePassword">Password</h3>
+            <h3 class="col-xs-3 col-xs-height col-top" style="margin-top: 0px;padding-bottom: 3%;"  id="profilePassword">Password</h3>
+            <div class="col-xs-9 col-xs-height col-top" style="margin-top: 0px;">
+                <%if( user.provider=='facebook') { %>
+                <div class="form-group" style="padding-bottom: 1%">
+                    <p style="margin-top: 0px; float: left;font-style:italic;color: red"><strong>You've logged in using Facebook with no password.</strong></p><br>
+                </div>
+                <% } else { %>
+                <div id="updatePasswordSuccessMessage" class="form-group" style="padding-bottom: 1%; display : none">
+                    <p style="margin-top: 0px; float: left;color: green;font-style:italic">You've sucessfully updated your password.</p><br>
+                </div>
+                <div id="updatePasswordFailMessage" class="form-group" style="padding-bottom: 1%; display : none">
+                    <p style="margin-top: 0px; float: left;color: red; font-style: italic">Update password failed. Please try it again.</p><br>
+                </div>
+                <% }%>
+                <form id="userUpdatePasswordForm" class="" method="post" style="padding-top: 2%">
+
+                    <div class="form-group" style="padding-bottom: 1%">
+                        <label class="control-label col-xs-4" for="oldPassword">Old Password</label>
+                        <div class="input-group col-xs-6" >
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-lock"></span>
+                                </span>
+                            <input type="password" id="oldPassword" name="oldPassword" class="form-control" placeholder="Old Password" minlength="8" required>
+                        </div>
+                    </div>
+                    <div class="form-group" style="padding-bottom: 1%">
+                        <label class="control-label col-xs-4" for="newPassword">New Password</label>
+
+                        <div class="input-group col-xs-6">
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-lock"></span>
+                                </span>
+                            <input type="password" id="newPassword" name="newPassword" class="form-control" placeholder="New Password" minlength="8" required>
+                        </div>
+                    </div>
+                    <div class="form-group" style="padding-bottom: 1%">
+                        <label class="control-label col-xs-4" for="confirmPassword">Confirm Password</label>
+
+                        <div class="input-group col-xs-6">
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-lock"></span>
+                                </span>
+                            <label for="confirmPassword" class="sr-only">Confirm Password</label>
+                            <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" placeholder="Confirm Password" equalTo="#newPassword" minlength="8" required>
+                        </div>
+                    </div>
+                    <div class="col-xs-4" style="padding-top: 1%; padding-bottom: 2%;float: left">
+                        <button id="submitUpdateProfilePasswordButton" class="btn btn-primary btn-block" type="submit" >Change Password</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+            <hr/>
+            <div class="row">
+                <h3 class="col-xs-3 col-xs-height col-top" style="margin-top: 0px;padding-bottom: 3%;"  id="profileEmail">Email</h3>
                 <div class="col-xs-9 col-xs-height col-top" style="margin-top: 0px;">
                     <%if( user.provider=='facebook') { %>
-                        <div class="form-group" style="padding-bottom: 1%">
-                            <p style="margin-top: 0px; float: left;font-style:italic;color: red"><strong>You've logged in using Facebook with no password.</strong></p><br>
-                        </div>
+                    <div class="form-group" style="padding-bottom: 1%">
+                        <p style="margin-top: 0px; float: left;font-style:italic;color: red"><strong>You've logged in using Facebook with no email.</strong></p><br>
+                    </div>
                     <% } else { %>
-                        <div id="updatePasswordSuccessMessage" class="form-group" style="padding-bottom: 1%; display : none">
-                            <p style="margin-top: 0px; float: left;color: green;font-style:italic">You've sucessfully updated your password.</p><br>
-                        </div>
-                        <div id="updatePasswordFailMessage" class="form-group" style="padding-bottom: 1%; display : none">
-                            <p style="margin-top: 0px; float: left;color: red; font-style: italic">Update password failed. Please try it again.</p><br>
-                        </div>
+                    <div id="updateEmailSuccessMessage" class="form-group" style="padding-bottom: 1%; display : none">
+                        <p style="margin-top: 0px; float: left;color: green;font-style:italic">You've sucessfully updated your email.</p><br>
+                    </div>
+                    <div id="updateEmailFailMessage" class="form-group" style="padding-bottom: 1%; display : none">
+                        <p style="margin-top: 0px; float: left;color: red; font-style: italic">Update email failed. Please try it again.</p><br>
+                    </div>
                     <% }%>
-                    <form id="userUpdatePasswordForm" class="" method="post" style="padding-top: 2%">
+                    <form id="userUpdateEmailForm" class="" method="post" style="padding-top: 2%">
 
                         <div class="form-group" style="padding-bottom: 1%">
-                            <label class="control-label col-xs-4" for="oldPassword">Old Password</label>
-                            <div class="input-group col-xs-6" >
+                            <label class="control-label col-xs-4" for="email">New Email</label>
+                            <div class="input-group col-xs-6"  >
                                 <span class="input-group-addon">
-                                    <span class="glyphicon glyphicon-lock"></span>
+                                    <span class="glyphicon glyphicon-envelope"></span>
                                 </span>
-                                <input type="password" id="oldPassword" name="oldPassword" class="form-control" placeholder="" minlength="8" required>
+                                <input type="text" id="newEmail" name="newEmail" class="form-control" placeholder="New Email">
                             </div>
                         </div>
                         <div class="form-group" style="padding-bottom: 1%">
-                            <label class="control-label col-xs-4" for="newPassword">New Password</label>
+                            <label class="control-label col-xs-4" for="updateEmailPassword">Password</label>
 
                             <div class="input-group col-xs-6">
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-lock"></span>
                                 </span>
-                                <input type="password" id="newPassword" name="newPassword" class="form-control" placeholder="" minlength="8" required>
-                            </div>
-                        </div>
-                        <div class="form-group" style="padding-bottom: 1%">
-                            <label class="control-label col-xs-4" for="confirmPassword">Confirm Password</label>
-
-                            <div class="input-group col-xs-6">
-                                <span class="input-group-addon">
-                                    <span class="glyphicon glyphicon-lock"></span>
-                                </span>
-                                <label for="confirmPassword" class="sr-only">Confirm Password</label>
-                                <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" placeholder="" equalTo="#newPassword" minlength="8" required>
+                                <label for="updateEmailPassword" class="sr-only">Enter your password</label>
+                                <input type="password" id="updateEmailPassword" name="updateEmailPassword" class="form-control" placeholder="Enter your password" minlength="8" required>
                             </div>
                         </div>
                         <div class="col-xs-4" style="padding-top: 1%; padding-bottom: 2%;float: left">
-                            <button id="submitUpdateProfilePasswordButton" class="btn btn-primary btn-block" type="submit" >Change Password</button>
+                            <button id="submitUpdateProfileEmailButton" class="btn btn-primary btn-block" type="submit" >Update Email</button>
                         </div>
                     </form>
                 </div>
@@ -257,6 +301,7 @@
     }
     var updatePasswordFormValidateParams = {
         errorClass: "my-error-class",
+
         rules: {
             oldPassword: {
                 required: true,
@@ -316,6 +361,58 @@
         });
     });
 
+
+    var updateEmailFormValidateParams = {
+        errorClass: "my-error-class",
+        rules: {
+            newEmail: {
+                required: true,
+                email: true
+            },
+            updateEmailPassword: {
+                required: true,
+                minlength: 8
+            }
+        },
+        messages: {
+            updateEmailPassword: {
+                required: "Required.",
+                minlength: "Password at least 8 chars."
+            },
+            newEmail: {
+                required: "Required."
+            }
+        }
+    };
+    $("#userUpdateEmailForm").validate(
+            updateEmailFormValidateParams
+    );
+    //Update Password
+    $('#userUpdateEmailForm').submit(function( event ) {
+        event.preventDefault();
+        $('#updatePEmailSuccessMessage').hide();
+        $('#updateEmailFailMessage').hide();
+        if (!$("#userUpdateEmailForm").valid()) {
+            console.log("userUpdateEmailForm is not valid!");
+            return;
+        }
+        var updatedData={};
+        updatedData.newEmail = $('#newEmail').val();
+        updatedData.updateEmailPassword = $('#updateEmailPassword').val();
+        $.post('/services/user/updateEmail', {updatedData: updatedData}, function(data) {
+            console.log(data);
+            if(data=='success') {
+                $('#updateEmailSuccessMessage').show();
+                $('#updateEmailFailMessage').hide();
+                $('#email').val(updatedData.newEmail);
+
+            } else {
+                $('#updateEmailSuccessMessage').hide();
+                $('#updateEmailFailMessage').html(data).css({'color': 'red', 'font-style' : 'italic'}).show();
+            }
+            $('input[type="password"]').val('');
+        });
+    });
 </script>
 </body>
 </html>
