add backend preventing not willgive user update email and password

--- a/views/login/userProfile.ejs
+++ b/views/login/userProfile.ejs
@@ -243,6 +243,9 @@
                 $('#oldPassword').prop('readonly',true);
                 $('#newPassword').prop('readonly',true);
                 $('#confirmPassword').prop('readonly',true);
+                $('#submitUpdateProfileEmailButton').prop('disabled','disabled');
+                $('#newEmail').prop('readonly',true);
+                $('#updateEmailPassword').prop('readonly',true);
             });
         </script>
     <% } else { %>
