Fix the qrcode display issue.

--- a/views/charity/charity.ejs
+++ b/views/charity/charity.ejs
@@ -427,7 +427,7 @@
                     $('#userFav').append(favIcon)
                 <%}%>
 
-                if(charity.isFavored)
+              //  if(charity.isFavored)
                 $('#qrCode').attr('src','/resources/recipients/qrCode/QR_'+recipientId+'.png');
             })
         }
