make web session 30 minutes and mobile session 1 week. Adding notes for user pledge

--- a/views/login/userPledges.ejs
+++ b/views/login/userPledges.ejs
@@ -134,7 +134,7 @@
                 jQuery(pb.id+"tr").hide();
 
 
-                return;
+                //window.location.href="/users/pledge";
             }
 
             //refeshPage();
