--- a/views/charity/charity.ejs
+++ b/views/charity/charity.ejs
@@ -318,47 +318,97 @@
                     if($.trim(stripeCustomerId)) {
                         jQuery("#stripeCustomerId").val(stripeCustomerId);
 
-                         $('form').submit();
+                        console.dir("before submission");
 
-                        console.dir( "payment successfully made ");
+                        console.dir("before submission" + jQuery("#stripeCustomerId").val());
+
+
+                        /*
+                         $("#form").bind('ajax:complete', function() {
+
+                         // tasks to do
+                         console.dir("start submission");
+
+                         });
+                         $("#form").submit();
+                         */
+
+                        $.post("/payment/stripePayment", {amount: jQuery("#amount").val(), notes: jQuery("#notes").val(),
+                                    receipientId: jQuery("#receipientId").val(), stripeCustomerId: jQuery("#stripeCustomerId").val(), stripeTokenInput: jQuery("#stripeTokenInput").val()
+                                }
+                        ) .done( function(msg) { console.dir("after submission succeed"); } )
+                                .fail( function(xhr, textStatus, errorThrown) {
+                                    alert(xhr.responseText);
+                                });;
+
                         disableCheckout();
 
+                        //return;
 
+                    }
 
-                          return;
-                     }
+                  /*
+
 
                   $( '#stripeTokenInput').val('');
 
-                    //else of stripCustomerId is null, need to pop up Stripe checkout widget to enter credit card info, token is a function rather than variable
-                      var token = function(res){
-                         // var $input = $('<input id= stripeTokenInput type=hidden name=stripeToken />').val(res.id);
-                         // $('form').append($input).submit();
-                          $( '#stripeTokenInput').val(res.id);
-                          $('form').submit();
-                      };
-                      var payAmount=  jQuery("#paymentAmount").val();
+                  //else of stripCustomerId is null, need to pop up Stripe checkout widget to enter credit card info, token is a function rather than variable
+                  var token = function(res){
+                      // var $input = $('<input id= stripeTokenInput type=hidden name=stripeToken />').val(res.id);
+                      // $('form').append($input).submit();
+                      $( '#stripeTokenInput').val(res.id);
+                      $('form').submit();
+                  };
+                  var payAmount=  jQuery("#paymentAmount").val();
 
-                      StripeCheckout.open({
-                          key:         'pk_test_iJPmMQMGarAHRE7oUcM5iBxO',
-                          address:     true,
-                          amount:      payAmount*100,//scale in cents instead of dollar
-                          currency:    'usd',
-                          name:        'User:'+ '<%=user.firstName%>',
-                          description: 'Will Give Checkout',
-                          panelLabel:  'Checkout',
-                          token:       token
-                      });
+                  StripeCheckout.open({
+                      key:         'pk_test_iJPmMQMGarAHRE7oUcM5iBxO',
+                      address:     true,
+                      amount:      payAmount*100,//scale in cents instead of dollar
+                      currency:    'usd',
+                      name:        'User:'+ '<%=user.firstName%>',
+                      description: 'Will Give Checkout',
+                      panelLabel:  'Checkout',
+                      token:       token
+                  });
 
 
 
                   disableCheckout();
 
                   return false;
-              });
-              <% } %>
 
-          })
+
+
+
+
+
+                                    /*
+                                     jQuery.ajax({
+                                     data: $(this).serialize(),
+                                     url: "/payment/stripePayment",
+                                     type: this.method,
+                                     error: function() {
+
+                                     console.dir("error in payment");
+                                     //  $(thistarget).html("<span class='error'>Failed to submit form!</span>");
+                                     },
+                                     success: function(results) {
+                                     // $(thistarget).html(results);
+                                     console.dir("results looks good in payment");
+                                     }
+                                     })
+                                     return false;
+                                     }*/
+
+
+
+
+
+                         });
+
+              <% } %>
+          });
 
               //direct charge on the account without pop up payment checkout wizard
       </script>
