--- a/views/charity/charity.ejs
+++ b/views/charity/charity.ejs
@@ -289,128 +289,91 @@
               <%if ( undefined==user || user.provider=='recipient' ) {%>
                     window.location.href='/login/signin';
               <%} else {%>
-              //get userId from session
-              //query DB to find strip ID
-              //jQuery.get( url [, data ] [, success ] [, dataType ] )
+
               existingUserById = '/services/payment/stripePayment/queryUser/';
 
               var stripId;
 
+              var r = confirm("Are you sure to donate $" + jQuery("#amount").val() + " to "  + charity.name + " ?" );
+              if (r == true) {
+                  $.get(existingUserById, {userId: <%=user.userId%>}, function (result) {
+                      console.dir("userId on UI: <%=user.userId%>");
+                      if (!result || result == "failed") {
+                          console.dir("failed to get results");
+                          disableCheckout();
+                          return;
+                      }
+                      //alert("currentResults:"+ result);
+                      stripeCustomerId = result;
+                      console.dir("stripeCustomerId(charity.ejs): " + stripeCustomerId);
+                      if (stripeCustomerId != null)
+                          console.dir("current stripCustomerId:" + stripeCustomerId);
+                      else
+                          console.dir("current stripCustomerId: null");
 
-              //Inside a function a special variable "arguments" is always available. It's similar to an array in that it has a length property, but it lacks the built-in methods of an array.
-              $.get(existingUserById, { userId: <%=user.userId%> },function(result) {
-                  console.dir("userId on UI: <%=user.userId%>");
-                  if (!result || result == "failed") {
-                      console.dir("failed to get results");
+                      if ($.trim(stripeCustomerId)) {
+                          jQuery("#stripeCustomerId").val(stripeCustomerId);
+
+                          console.dir("before submission");
+
+                          console.dir("before submission" + jQuery("#stripeCustomerId").val());
+
+                          $.post("/services/payment/stripePayment", {
+                                      amount: jQuery("#amount").val(),
+                                      notes: jQuery("#notes").val(),
+                                      receipientId: jQuery("#receipientId").val(),
+                                      stripeCustomerId: jQuery("#stripeCustomerId").val(),
+                                      stripeTokenInput: jQuery("#stripeTokenInput").val()
+                                  }
+                          ).done(function (msg) {
+                                      console.dir("after submission succeed");
+                                  })
+                                  .fail(function (xhr, textStatus, errorThrown) {
+                                      alert(xhr.responseText);
+                                  });
+                          disableCheckout();
+
+                          return;
+
+                      }
+
+
+                      $('#stripeTokenInput').val('');
+
+                      var token = function (res) {
+
+                          $('#stripeTokenInput').val(res.id);
+                          $('form').submit();
+                      };
+                      var payAmount = jQuery("#paymentAmount").val();
+
+                      StripeCheckout.open({
+                          key: 'pk_test_iJPmMQMGarAHRE7oUcM5iBxO',
+                          address: true,
+                          amount: payAmount * 100,//scale in cents instead of dollar
+                          currency: 'usd',
+                          name: 'User:' + '<%=user.firstName%>',
+                          description: 'Will Give Checkout',
+                          panelLabel: 'Checkout',
+                          token: token
+                      });
+
+
                       disableCheckout();
+
+                      return false;
+
+                  });
+              }
+
+               else {
                       return;
                   }
-                  //alert("currentResults:"+ result);
-                  stripeCustomerId = result;
-                  console.dir("stripeCustomerId(charity.ejs): "+ stripeCustomerId);
-                  if(stripeCustomerId!=null)
-                      console.dir("current stripCustomerId:"+ stripeCustomerId);
-                  else
-                      console.dir("current stripCustomerId: null");
-                  //need to pass thru charityId  as well
-
-                  //if stripCustomerId not null, then post to the payment page automatically
-                    if($.trim(stripeCustomerId)) {
-                        jQuery("#stripeCustomerId").val(stripeCustomerId);
-
-                        console.dir("before submission");
-
-                        console.dir("before submission" + jQuery("#stripeCustomerId").val());
+              
+          <% } %>
+              });
 
 
-                        /*
-                         $("#form").bind('ajax:complete', function() {
-
-                         // tasks to do
-                         console.dir("start submission");
-
-                         });
-                         $("#form").submit();
-                         */
-
-                        $.post("/services/payment/stripePayment", {amount: jQuery("#amount").val(), notes: jQuery("#notes").val(),
-                                    receipientId: jQuery("#receipientId").val(), stripeCustomerId: jQuery("#stripeCustomerId").val(), stripeTokenInput: jQuery("#stripeTokenInput").val()
-                                }
-                        ) .done( function(msg) { console.dir("after submission succeed"); } )
-                                .fail( function(xhr, textStatus, errorThrown) {
-                                    alert(xhr.responseText);
-                                });;
-
-                        disableCheckout();
-
-                        return;
-
-                    }
-
-
-
-
-                  $( '#stripeTokenInput').val('');
-
-                  //else of stripCustomerId is null, need to pop up Stripe checkout widget to enter credit card info, token is a function rather than variable
-                  var token = function(res){
-                      // var $input = $('<input id= stripeTokenInput type=hidden name=stripeToken />').val(res.id);
-                      // $('form').append($input).submit();
-                      $( '#stripeTokenInput').val(res.id);
-                      $('form').submit();
-                  };
-                  var payAmount=  jQuery("#paymentAmount").val();
-
-                  StripeCheckout.open({
-                      key:         'pk_test_iJPmMQMGarAHRE7oUcM5iBxO',
-                      address:     true,
-                      amount:      payAmount*100,//scale in cents instead of dollar
-                      currency:    'usd',
-                      name:        'User:'+ '<%=user.firstName%>',
-                      description: 'Will Give Checkout',
-                      panelLabel:  'Checkout',
-                      token:       token
-                  });
-
-
-
-                  disableCheckout();
-
-                  return false;
-
-
-
-
-
-
-                                    /*
-                                     jQuery.ajax({
-                                     data: $(this).serialize(),
-                                     url: "/payment/stripePayment",
-                                     type: this.method,
-                                     error: function() {
-
-                                     console.dir("error in payment");
-                                     //  $(thistarget).html("<span class='error'>Failed to submit form!</span>");
-                                     },
-                                     success: function(results) {
-                                     // $(thistarget).html(results);
-                                     console.dir("results looks good in payment");
-                                     }
-                                     })
-                                     return false;
-                                     }*/
-
-
-
-
-
-                         });
-
-              <% } %>
-          });
-
-              //direct charge on the account without pop up payment checkout wizard
       </script>
 
     <%include ../layout/footer.ejs%>
