remove remember me in stripe dialog

--- a/views/charity/charity.ejs
+++ b/views/charity/charity.ejs
@@ -354,6 +354,7 @@
                           currency: 'usd',
                           name: 'User:' + '<%=user.firstName%>',
                           description: 'Will Give Checkout',
+                          allowRememberMe: false,
                           panelLabel: 'Checkout',
                           token: token
                       });
