--- a/views/charity/charity.ejs
+++ b/views/charity/charity.ejs
@@ -248,46 +248,29 @@
           <input id="receipientId"  name="receipientId" value="0">
           <input id="stripeCustomerId"  name="stripeCustomerId" value="0">
           <input id= stripeTokenInput type=hidden name=stripeToken />
-
       </form>
-
 
       <script>
           function enableCheckout() {
               document.getElementById("contribute_button").style.display="none";
               document.getElementById("paymentAmountForm").style.display="block";
-              //alert("Please confirm you will pay the following amount: "+ jQuery("#paymentAmount").val());
               jQuery("#amount").val(jQuery("#paymentAmount").val());
               jQuery("#notes").val(jQuery("#paymentNotes").val());
               jQuery("#receipientId").val(<%=pageId%>);
-
-              //alert("Set amount: "+ jQuery("#amount").val());
-
-              //alert( "amount:" +jQuery("#amount").val());
-
-
           }
-
           function disableCheckout() {
               document.getElementById("contribute_button").style.display="block";
               document.getElementById("paymentAmountForm").style.display="none";
               //alert("Please confirm you will pay the following amount: "+ jQuery("#paymentAmount").val());
               jQuery("#paymentAmount").val(0);
           }
-
-
       </script>
-
-
-
-
-
 
       <script>
 
           $('#confirm').click(function(){
               <%if ( undefined==user || user.provider=='recipient' ) {%>
-              window.location.href='/login/signin';
+                window.location.href='/login/signin';
               <%} else {%>
 
               existingUserById = '/services/payment/stripePayment/queryUser/';
@@ -296,24 +279,15 @@
               var perTimeCheck;
               var dailyCheck
 
-
-
               if( jQuery("#amount").val() > userPref.maxAmountPerTime){
-
                   alert("Your donation exceeds your limit: $" + userPref.maxAmountPerTime + " ." +
-
                           "Please update your limitation for single transaction in profile before donation " );
-
                   return;
-
               }
-
-
 
               if( parseInt(dailyAmount) + parseInt(jQuery("#amount").val()) > userPref.maxAmountPerDay){
                   alert("You have donated more than " + userPref.maxAmountPerDay+ " today." + " Please update your profile settings before donation.");
                   return;
-
               }
               var r = confirm("Are you sure to donate $" + jQuery("#amount").val() + " to " + charity.name + " ?");
 
@@ -354,34 +328,30 @@
                                       alert(xhr.responseText);
                                   });
                           disableCheckout();
-
                           return;
-
                       }
 
 
                       $('#stripeTokenInput').val('');
 
                       var token = function (res) {
-
                           //$('#stripeTokenInput').val(res.id);
                           //$('form').submit();
                           $.post("/services/payment/stripePayment", {
-                                      amount: jQuery("#amount").val(),
-                                      notes: jQuery("#notes").val(),
-                                      receipientId: jQuery("#receipientId").val(),
-                                      stripeCustomerId: 0,
-                                      stripeToken: res.id
-                                  }
-                          ).done(function (msg) {
-                                      $('#stripeTokenInput').val('');
-                                      console.dir("after submission succeed");
-                                  })
-                                  .fail(function (xhr, textStatus, errorThrown) {
-                                      $('#stripeTokenInput').val('');
-                                      alert(xhr.responseText);
-                                      console.dir("after submission failed");
-                                  });
+                              amount: jQuery("#amount").val(),
+                              notes: jQuery("#notes").val(),
+                              receipientId: jQuery("#receipientId").val(),
+                              stripeCustomerId: 0,
+                              stripeToken: res.id
+                          }).done(function (msg) {
+                              $('#stripeTokenInput').val('');
+                              console.dir("after submission succeed");
+                          })
+                          .fail(function (xhr, textStatus, errorThrown) {
+                              $('#stripeTokenInput').val('');
+                              alert(xhr.responseText);
+                              console.dir("after submission failed");
+                          });
                       };
                       var payAmount = jQuery("#paymentAmount").val();
 
@@ -397,61 +367,42 @@
                           token: token
                       });
 
-
                       disableCheckout();
-
                       return false;
-
                   });
 
 
+                  if ($.trim(stripeCustomerId)) {
+                      jQuery("#stripeCustomerId").val(stripeCustomerId);
 
-                              if ($.trim(stripeCustomerId)) {
-                                  jQuery("#stripeCustomerId").val(stripeCustomerId);
+                      console.dir("before submission" + jQuery("#stripeCustomerId").val());
 
-
-
-                                  console.dir("before submission" + jQuery("#stripeCustomerId").val());
-
-                                  $.post("/services/payment/stripePayment", {
-                                              amount: jQuery("#amount").val(),
-                                              notes: jQuery("#notes").val(),
-                                              receipientId: jQuery("#receipientId").val(),
-                                              stripeCustomerId: jQuery("#stripeCustomerId").val(),
-                                              stripeTokenInput: jQuery("#stripeTokenInput").val()
-                                          }
-                                  ).done(function (msg) {
-                                              console.log(msg);
-                                             window.location.href="/confirmation?code=" + JSON.parse(msg).confirmationCode ;
-                                              //    console.dir("after submission succeed");
-                                          })
-                                          .fail(function (xhr, textStatus, errorThrown) {
-                                              alert(xhr.responseText);
-                                          });
-                                  disableCheckout();
-
-                                  return;
-
+                      $.post("/services/payment/stripePayment", {
+                                  amount: jQuery("#amount").val(),
+                                  notes: jQuery("#notes").val(),
+                                  receipientId: jQuery("#receipientId").val(),
+                                  stripeCustomerId: jQuery("#stripeCustomerId").val(),
+                                  stripeTokenInput: jQuery("#stripeTokenInput").val()
                               }
+                      ).done(function (msg) {
+                                  console.log(msg);
+                                 window.location.href="/confirmation?code=" + JSON.parse(msg).confirmationCode ;
+                                  //    console.dir("after submission succeed");
+                              })
+                              .fail(function (xhr, textStatus, errorThrown) {
+                                  alert(xhr.responseText);
+                              });
+                      disableCheckout();
 
+                      return;
 
-                              $('#stripeTokenInput').val('');
-
-                              var token = function (res) {
+                  }
 
               }
               <% } %>
           });
 
-
-
       </script>
-
-
-
-
-
-
 
     <%include ../layout/footer.ejs%>
     <script language="JavaScript">
@@ -494,10 +445,11 @@
             $.get(getUserSettingsUrl, function(data){
 
                 if(typeof(data[0])!='undefined'){
-                    
                     console.log(data);
-                dailyAmount = data[0].dailyAmount;
-                } else{dailyAmount = 0;}
+                    dailyAmount = data[0].dailyAmount;
+                } else{
+                    dailyAmount = 0;
+                }
             });
         }
 
