--- a/views/charity/charity.ejs
+++ b/views/charity/charity.ejs
@@ -108,18 +108,17 @@
                     </div>
                 </div>
                 <div class="row" style="height: 50px; padding-top: 1%;padding-bottom: 1%">
+                    <div id="userFav" class="col-xs-2">
+                    </div>
+                    <div class="col-xs-1">
+                        &nbsp;
+                    </div>
                     <div class="share_button col-xs-2" >
                         <fb:share class="fb-share-button" id="fbShareButton" data-href="https://www.willgive.org/charity/<%=pageId%>" data-type="button_count"></fb:share>
                     </div>
                     <div id="tweets" class="col-xs-1">
                         <a href="https://twitter.com/share" id="twitterShareButton" class="twitter-share-button" data-size="">Tweet</a>
                         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-                    </div>
-
-                    <div id="userFav" class="col-xs-2 pull-right">
-                    </div>
-                    <div class="col-xs-1">
-                        &nbsp;
                     </div>
                 </div>
                 <!-- left text-->
